--- a/labs/lab01/presentation/infosec--lab01--presentation.qmd
+++ b/labs/lab01/presentation/infosec--lab01--presentation.qmd
@@ -1,10 +1,9 @@
 ---
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  name: Мазурский Александр Дмитриевич
+  degrees: студент НКАбд-02-24
+  email: 1132242468@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -12,10 +11,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: Лабораторная работа №1
+subtitle: Установка и конфигурация ОС на виртуальную машину
 license: CC BY
-date: today
+date: 2025-03-06
 date-format: "YYYY-MM-DD" # Example: 2025-09-06
 ---
 
@@ -26,175 +25,57 @@ date-format: "YYYY-MM-DD" # Example: 2025-09-06
 :::::::::::::: {.columns align=center}
 ::: {.column width="70%"}
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+  * Мазурский Александр Дмитриевич
+  * Студент НКАбд-02-24
+  * Российский университет дружбы народов
+  * [1132242468@pfur.ru](mailto:1132242468@pfur.ru)
 
 :::
 ::: {.column width="30%"}
 
-![](./image/kulyabov.jpg)
+Место для изображения: фотография докладчика.
 
 :::
 ::::::::::::::
 
-# Вводная часть
+# Цель работы
 
-## Актуальность
+Целью данной работы является приобретение практических навыков установки операционной системы на виртуальную машину, настройки минимально необходимых для дальнейшей работы сервисов.
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Задание
 
-## Объект и предмет исследования
+- Установить Linux (Rocky) на виртуальную машину VirtualBox.
+- Выполнить базовую конфигурацию системы и сетевых параметров.
+- Подготовить систему для выполнения последующих лабораторных работ.
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+# Теоретическое введение
 
-## Цели и задачи
+- Виртуализация позволяет запускать гостевые ОС в изолированной среде.
+- VirtualBox поддерживает создание виртуальных дисков и подключение ISO-образов.
+- После установки требуется базовая настройка пользователя, сети и имени хоста.
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Выполнение лабораторной работы
 
-## Материалы и методы
+- Создал рабочий каталог в `/var/tmp` и указал его как папку ВМ в VirtualBox.
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
-
-# Создание презентации
-
-## Процессор `pandoc`
-
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
-
-## Формат `pdf`
-
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
-
-## Код для формата `pdf`
-
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
-
-## Формат `html`
-
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
-
-## Код для формата `html`
-
-- Тема задаётся в файле `Makefile`
-
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
-
-## Получающиеся форматы
-
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
-
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+- Создал ВМ: Linux RedHat (64-bit), 2048 МБ RAM, VDI (динамический) 40 ГБ.
 
 
-## Итоговый слайд
+- Подключил ISO Rocky Linux, выбрал язык, окружение Server with GUI и Development Tools, отключил KDUMP.
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
 
-# Рекомендую
+- Задал имя узла `user.localdomain`, включил сеть, установил пароли root и администратора.
 
-## Принцип 10/20/30
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+- Установил Guest Additions и проверил имя хоста через `hostnamectl`.
 
-## Связь слайдов
 
-::: incremental
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+# Домашнее задание
 
-:::
+- Проанализировал вывод `dmesg`, определил версию ядра, параметры CPU, объём памяти, тип гипервизора, тип ФС корня и порядок монтирования.
+  Место для изображения: фрагменты вывода `dmesg`.
 
-## Количество сущностей
+# Выводы
 
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+Установил Rocky Linux в VirtualBox, выполнил первичную конфигурацию системы и подтвердил корректные параметры загрузки.
