--- a/labs/lab01/report/infosec--lab01--report.qmd
+++ b/labs/lab01/report/infosec--lab01--report.qmd
@@ -1,10 +1,9 @@
 ---
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  name: Мазурский Александр Дмитриевич
+  degrees: студент НКАбд-02-24
+  email: 1132242468@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -13,53 +12,59 @@ author:
       address: ул. Миклухо-Маклая, д. 6
 
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №1"
+subtitle: "Установка и конфигурация операционной системы на виртуальную машину"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Целью данной работы является приобретение практических навыков установки операционной системы на виртуальную машину, настройки минимально необходимых для дальнейшей работы сервисов.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+- Установить Linux (Rocky) на виртуальную машину VirtualBox.
+- Выполнить базовую конфигурацию системы и сетевых параметров.
+- Подготовить систему для выполнения последующих лабораторных работ.
 
 # Теоретическое введение
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+Виртуализация позволяет запускать гостевые операционные системы в изолированной среде на одном физическом компьютере. Для учебных задач удобно использовать VirtualBox, который поддерживает создание виртуальных дисков, настройку ресурсов и подключение ISO-образов для установки ОС. После установки важно выполнить базовую настройку системы: задать имя хоста, создать пользователя, настроить сеть и убедиться в корректной работе окружения.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+1. Перешёл в каталог для временных данных и создал рабочую директорию:
+   `cd /var/tmp` и `mkdir /var/tmp/<login>`.
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+   
+   Место для изображения: создание каталога в терминале.
+2. Запустил VirtualBox и проверил, что папка для виртуальных машин указывает на `/var/tmp/<login>`.
+   Место для изображения: окно настроек VirtualBox с путём к папке виртуальных машин.
+3. Создал виртуальную машину с именем логина, типом Linux RedHat (64-bit), объёмом RAM 2048 МБ.
+   Место для изображения: шаги мастера создания ВМ с выбором типа ОС и объёма памяти.
+4. Настроил виртуальный диск VDI (динамический) объёмом 40 ГБ и подключил ISO-образ Rocky Linux.
+   Место для изображения: выбор формата диска и подключение ISO-образа.
+5. Выполнил установку системы: выбрал язык интерфейса, часовой пояс, раскладки клавиатуры, окружение Server with GUI и дополнение Development Tools, отключил KDUMP.
+   Место для изображения: экраны установки с выбором языка и параметров установки.
+6. Включил сетевое соединение, задал имя узла `user.localdomain`, установил пароли для root и пользователя с правами администратора.
+   Место для изображения: настройки сети и имя узла, создание пользователя.
+7. После установки принял лицензионные условия, извлёк ISO-образ и перезагрузил систему.
+   Место для изображения: экран принятия лицензии и завершения установки.
+8. Подключил образ дополнений гостевой ОС через меню устройств и установил их, затем перезагрузил систему.
+   Место для изображения: подключение Guest Additions.
+9. Проверил соответствие имени пользователя и хоста соглашению об именовании:
+   `adduser -G wheel <login>`, `passwd <login>`, `hostnamectl set-hostname <login>`, `hostnamectl`.
+   Место для изображения: вывод команды `hostnamectl`.
+
+# Домашнее задание
+
+Проанализировал вывод загрузки системы и определил ключевые параметры с помощью `dmesg` и `grep`:
+версия ядра, частота и модель процессора, объём доступной памяти, тип гипервизора, тип файловой системы корневого раздела и порядок монтирования.
+Место для изображения: фрагменты вывода `dmesg` с найденными параметрами.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+В ходе работы установил Rocky Linux в VirtualBox, выполнил первичную настройку виртуальной машины, задал корректные учётные данные и проверил параметры загрузки системы.
 
 # Список литературы{.unnumbered}
 
