--- a/labs/lab01/presentation/_resources/tex/beamer.tex
+++ b/labs/lab01/presentation/_resources/tex/beamer.tex
@@ -5,8 +5,14 @@
   %   RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}
   % ]{plex-otf}
 }{
-  %% TinyTeX
-  \usepackage{libertine}
+  %% Local fallback fonts with Cyrillic support
+  \usepackage{fontspec}
+  \usefonttheme{professionalfonts}
+  \AtBeginDocument{%
+    \setmainfont{DejaVu Serif}
+    \setsansfont{DejaVu Sans}
+    \setmonofont{DejaVu Sans Mono}%
+  }
 }
 
 %%% Load theme
